添加高德地图

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.4&key=a3820a6907583ac4346060a5d02e3e96"></script>
   </body>
 </html>
